--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.0",
     "react": "18.3.1",
+    "react-content-loader": "^7.0.2",
     "react-native": "0.77.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.6.0",
+    "react-native-svg": "^15.11.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
