--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.3.1",
     "react-content-loader": "^7.0.2",
     "react-native": "0.77.0",
+    "react-native-image-picker": "^8.0.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.6.0",
